// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModelCellAttachment should render the empty text when value is nullish 1`] = `
<DocumentFragment>
  -
</DocumentFragment>
`;

exports[`ModelCellAttachment should render the overridden empty text when value is nullish 1`] = `
<DocumentFragment>
  baz
</DocumentFragment>
`;

exports[`ModelCellAttachment should render with global override shorthand 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;

exports[`ModelCellAttachment should render with global override shorthand for model 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;

exports[`ModelCellAttachment should render with global override shorthand for model and attribute 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;

exports[`ModelCellAttachment uses display_name for link text 1`] = `
<DocumentFragment>
  <a
    href="https://example.com/image.png"
  >
    foo
  </a>
</DocumentFragment>
`;

exports[`ModelCellAttachment uses url for link text as fallback 1`] = `
<DocumentFragment>
  <a
    href="https://example.com/image.png"
  >
    https://example.com/image.png
  </a>
</DocumentFragment>
`;
